--- a/src/Formularios/frmDoctor.form
+++ b/src/Formularios/frmDoctor.form
@@ -37,6 +37,11 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="203" max="-2" attributes="0"/>
+              <Component id="btnRecargarTabla" min="-2" pref="171" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -45,9 +50,11 @@
               <Component id="lblUsuario" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="lblDireccionIPYSocket" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="61" max="32767" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="300" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="300" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="btnRecargarTabla" min="-2" pref="52" max="-2" attributes="0"/>
+              <EmptySpace pref="21" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -63,7 +70,7 @@
         <Component class="javax.swing.JTable" name="jtPacientes">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="5" rowCount="4">
+              <Table columnCount="5" rowCount="0">
                 <Column editable="false" title="Nombre" type="java.lang.Object"/>
                 <Column editable="false" title="Edad" type="java.lang.Object"/>
                 <Column editable="false" title="Peso" type="java.lang.Object"/>
@@ -90,6 +97,14 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Usuario:"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnRecargarTabla">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Recargar tabla"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRecargarTablaActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
