Iniciación express de los objetos y correcto funcionamiento de los forms

--- a/src/Formularios/frmInicio.form
+++ b/src/Formularios/frmInicio.form
@@ -151,7 +151,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Nombre del cliente:"/>
+        <Property name="text" type="java.lang.String" value="Nombre del trabajador:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtNombreCliente">
