--- a/src/Formularios/frmServidor.form
+++ b/src/Formularios/frmServidor.form
@@ -27,25 +27,16 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="Pane1" max="32767" attributes="0"/>
+                      <Component id="Pane1" pref="638" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="lblDirecciónIP" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblNumeroSocket" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="32767" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="lblNombreNodo" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="289" pref="533" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="lblUbicacion" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblUbicacion" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="btnResumen" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblDirecciónIP" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblNumeroSocket" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
@@ -58,9 +49,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="lblUbicacion" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-              <Component id="lblNombreNodo" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="lblDirecciónIP" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="lblNumeroSocket" min="-2" max="-2" attributes="0"/>
@@ -69,18 +58,13 @@
               <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="Pane1" pref="225" max="32767" attributes="0"/>
+              <Component id="Pane1" pref="276" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="lblNombreNodo">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Nombre del servidor:"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JLabel" name="lblDirecci&#xf3;nIP">
       <Properties>
         <Property name="text" type="java.lang.String" value="Direcci&#xf3;n IP:"/>
